Presenter video and stop cropping screenshare

--- a/res/css/views/voip/GroupCallView/_VideoGrid.scss
+++ b/res/css/views/voip/GroupCallView/_VideoGrid.scss
@@ -117,6 +117,18 @@ limitations under the License.
             border-radius: 20px;
             box-shadow: inset 0 0 0 4px #0dbd8b !important;
         }
+
+        &.mx_screenshare > video {
+            object-fit: contain;
+        }
+    }
+
+    .mx_screensharePIP {
+        bottom: 8px;
+        right: 8px;
+        width: 25%;
+        max-width: 360px;
+        border-radius: 20px;
     }
 
     &.mx_simpleVideoGrid {
